k8/00_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: m324-team4 # Ask the teacher for the namespace name
